@@ -1,11 +1,13 @@
 ﻿[B]Changelog[/B]
-Fixed: Vijf.be did not show all episodes (Fixes #815)
+Added: VRT.NU dates and Live channels (See #810)
+Fixed: JSON parsing of VTM.be
 
 [I]Previous Changes[/I]
+Fixed: Vijf.be did not show all episodes (Fixes #815)
 Added: Vijf.be (Fixes #760)
 Changed: no more login required for Vier.be (See #809)
 Added: Q2.be (Fixes #759)
-Added: More VTM programs (See #795)
+Added: More VTM programs (See #795)1
 Fixed: VTM has some strange escapes in the JSON
 Fixed: VTM.be streams did not play (Fixes #795)
 Fixed: De Redactie did not show most recent shows (Fixes #439 again)
